# AI-Work-Control-Plane

./: .env.example  .gitignore  EXECUTION_PLANE_DEEP_DIVE.md  INTERVIEW_PREP.md  Makefile  PROJECT_BREAKDOWN.md  PROJECT_BREAKDOWN_V2.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: coding-agent-goal-spec.md  coding-agent-master-plan.md  coding-agent-phase1-plan.md  coding-agent-phase2-plan.md  coding-agent-phase3-plan.md  coding-agent-phase4-plan.md  coding-agent-target-mode-evolution-plan.md  native-coding-agent-upgrade-plan.md  决策核心-执行拓扑-运行时分层说明.md
docs/clarify-upgrade/: stage-1-plan.md  stage-10-plan.md  stage-11-plan.md  stage-12-plan.md  stage-2-plan.md  stage-3-plan.md  stage-4-plan.md  stage-5-plan.md  stage-6-plan.md  stage-7-plan.md  stage-8-plan.md  stage-9-plan.md
docs/decisions/: 0001-documentation-as-runtime-context.md  0002-handoff-packet-contract.md  0003-canonical-docs-vs-derived-views.md  0004-ai-work-control-plane-reframe.md
docs/process/: agent-evolution-master-plan.md  agent-evolution-phase-0-baseline.md  agent-evolution-phase-1-decision-externalization.md  agent-evolution-phase-2-structured-collaboration.md  agent-evolution-phase-3-multi-role-review.md  agent-evolution-phase-4-limited-multipath.md  agent-evolution-phase-5-recovery-search.md  agent-evolution-phase-6-retrieval-governance.md  agent-evolution-phase-7-5-surface-convergence.md  agent-evolution-phase-7-semi-autonomous-role-contracts.md  agent-internship-pack.md  agent-orchestrator-implementation-process.md  agent-systems-study-map.md  agent-team-operator-runbook.md  ai-work-control-plane-codex-runtime-pilot-phase-4-evidence-consumption.md  ai-work-control-plane-codex-runtime-pilot-phase-5-final-convergence.md  ai-work-control-plane-codex-runtime-pilot-plan.md  ai-work-control-plane-continuous-hardening-plan.md  ai-work-control-plane-continuous-phase-0-baseline.md  (+131 more)
tests/: test_actions.py  test_adapters.py  test_clarify_eval.py  test_cli.py  test_cli_presenters.py  test_coding_agent_runtime.py  test_command.py  test_control_plane.py  test_docs_process.py  test_events.py  test_evidence.py  test_execution_models.py  test_execution_runtime_legacy.py  test_ideation.py  test_jobs.py  test_memory.py  test_messages.py  test_native_productization.py  test_orchestrator.py  test_planning_support.py  test_real_llm_slotfill_integration.py  test_review.py  test_routing.py  test_session_productization.py  test_session_runtime.py  test_strategy_planner.py  test_support.py  test_task_router.py  test_team.py  test_tmux_runtime.py  test_ui_server.py  test_ui_service.py  test_work_graph.py
(+90 files in other folders)
