[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Adaptive Claude-Codex-Claude orchestration framework MVP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Agent Orchestrator Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
ui = [
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[project.scripts]
agent-orchestrator = "agent_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
