[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "1.0.0"
description = "Local-first AI Work Control Plane for long-cycle agent work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Agent Orchestrator Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8"
]
ui = [
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[project.scripts]
agent-orchestrator = "agent_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow_integration: slower CLI/team integration scenarios kept for full release gates; skip with -m 'not slow_integration' for quick local feedback"
]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
